# memagent

./: .gitignore  CLAUDE-TEMPLATE.md  CLAUDE.md  GEMINI.md  LICENSE  pyproject.toml  refactoring_summary.md
.claude/: api-reference.md  architecture.md  code-standards.md  danger-zones.md  error-handling.md  implementation-guide.md  migration-status.md  performance.md  pre-commit-checklist.md  setup-guide.md  technical-debt.md  testing-guide.md
.github/workflows/: claude-auto-review.yml  claude.yml  main.yml
MemAgent/: __init__.py  main.py
MemAgent/memory/: __init__.py  base.py  main.py
MemAgent/model/: record.py
MemAgent/provider/: abc.py  sqlite.py
tests/: test_memory.py  test_sqlite_provider.py
